# Duri

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo.yml
debian/: changelog  license
src/: main.rs
