[package]
name = "duri"
version = "0.1.4"
authors = ["Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "CLI tool to get data URI of a file"
readme = "README.md"
homepage = "https://github.com/hongquan/Duri"
repository = "https://github.com/hongquan/Duri.git"
keywords = ["data-uri", "base64", "cli", "http-api"]
categories = ["command-line-utilities", "development-tools", "multimedia::encoding"]
exclude = [
    ".github",
    "debian",
    ".travis.yml",
]

[package.metadata.deb]
extended-description = """It is useful when you want to upload file to a HTTP API, which requires data to be posted as JSON string.
You then can use this tool to get the file's base64-encoded content, passed to "jo" to build JSON string.
"""
section = "rust"
copyright = "2021, Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
license-file = ["debian/license", "3"]
changelog = "debian/changelog"

[dependencies]
log = "0.4.14"
eyre = "0.6.5"
flexi_logger = { version = "0.25.5", features = ["colors"] }
color-eyre = "0.6.2"
base64 = "0.21.2"
urlencoding = "2.1.2"
clap = { version = "4.3.0", features = ["suggestions", "color", "derive"] }
clap-verbosity-flag = "2.0.1"
tree_magic_mini = "3.0.3"
